--- a/about.html
+++ b/about.html
@@ -1,15 +1,9 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Hux."
+description: "关于"
 header-img: "img/about-bg.jpg"
 ---
-
-<!-- Language Selector -->
-<select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英文 English </option>
-</select>
 
 <!-- Chinese Version -->
 <div class="zh post-container">
@@ -22,59 +16,6 @@ header-img: "img/about-bg.jpg"
     <li>摄影作品 : <a href="http://windea.lofter.com/">http://windea.lofter.com/</a></li>
     </ul>
 </div>
-
-<!-- English Version -->
-<div class="en post-container">
-    <!--copied from markdown -->
-    <blockquote><p>一切都是最好的安排<br></blockquote>
-
-    <ul>
-    <li>QQ : <a href="tencent://message/?uin=87792280">87792280</a></li>
-    <li>摄影作品 : <a href="http://windea.lofter.com/">http://windea.lofter.com/</a></li>
-    </ul>
-</div>
-
-<!-- Handle Language Change -->
-<script type="text/javascript">
-    // get nodes
-    var $zh = document.querySelector(".zh");
-    var $en = document.querySelector(".en");
-    var $select = document.querySelector("select");
-
-    // bind hashchange event
-    window.addEventListener('hashchange', _render);
-
-    // handle render
-    function _render(){
-        var _hash = window.location.hash;
-        // en
-        if(_hash == "#en"){
-            $select.selectedIndex = 1;
-            $en.style.display = "block";
-            $zh.style.display = "none";
-        // zh by default
-        }else{
-            // not trigger onChange, otherwise cause a loop call.
-            $select.selectedIndex = 0;
-            $zh.style.display = "block";
-            $en.style.display = "none";
-        }
-    }
-
-    // handle select change
-    function onLanChange(index){
-        if(index == 0){
-            window.location.hash = "#zh"
-        }else{
-            window.location.hash = "#en"
-        }
-    }
-
-    // init
-    _render();
-</script>
-
-
 
 {% if site.duoshuo_username %}
 <!-- 多说评论框 start -->
