--- a/surveyredirect.html
+++ b/surveyredirect.html
@@ -1,4 +1,34 @@
-<meta http-equiv="refresh" content="0;url=https://jinshuju.net/f/cpqNOn">
+
 <script language="javascript" type="text/javascript">   
-    window.location.href = 'https://jinshuju.net/f/cpqNOn';
+    var now = new Date();
+    //Test
+    if(now >= new Date('2021/4/1 15:50:00') && now < new Date('2021/4/1 15:56:00') {
+      window.location.href = 'https://jinshuju.net/f/cpqNOn';
+    }
+    //4-1
+    if(now >= new Date('2021/4/1 15:56:00') && now < new Date('2021/4/1 15:58:00') {
+      window.location.href = 'https://jinshuju.net/f/k5pMbu';
+    }
+    /*
+    //3-31
+    if(now >= new Date('2021/4/1 00:00:00') && now < new Date('2021/4/2 12:00:00') {
+      window.location.href = 'https://jinshuju.net/f/cpqNOn';
+    }
+    //4-1
+    if(now >= new Date('2021/4/2 12:00:00') && now < new Date('2021/4/7 12:00:00') {
+      window.location.href = 'https://jinshuju.net/f/k5pMbu';
+    }*/
+    //4-7
+    if(now >= new Date('2021/4/7 12:00:00') && now < new Date('2021/4/9 12:00:00') {
+      window.location.href = 'https://jinshuju.net/f/UeVI3F';
+    }
+    //4-9
+    if(now >= new Date('2021/4/9 12:00:00') && now < new Date('2021/4/14 12:00:00') {
+      window.location.href = 'https://jinshuju.net/f/J7r3db';
+    }
+    //4-14
+    if(now >= new Date('2021/4/14 12:00:00') && now < new Date('2021/4/16 12:00:00') {
+      window.location.href = 'https://jinshuju.net/f/E7TgSQ';
+    }
 </script>
+<p>谢谢您的参与，投票已经结束。</p>
