--- a/surveyredirect.html
+++ b/surveyredirect.html
@@ -1,12 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en" data-color-mode="dark" data-light-theme="light" data-dark-theme="dark">
+  <head>
+    <meta charset="utf-8">
 <script language="javascript" type="text/javascript">   
     var now = new Date();
+	console.log(now);
     //Test
-    if(now >= new Date('2021/4/1 15:50:00') && now < new Date('2021/4/1 16:00:00')) {
+    if(now >= new Date('2021/4/1 15:50:00') && now < new Date('2021/4/1 16:10:00')) {
       window.location.href = 'https://jinshuju.net/f/cpqNOn';
+	  console.log(now);
     }
     //4-1
-    if(now >= new Date('2021/4/1 16:00:00') && now < new Date('2021/4/1 16:00:02')) {
+    if(now >= new Date('2021/4/1 16:10:00') && now < new Date('2021/4/1 16:15:00')) {
       window.location.href = 'https://jinshuju.net/f/k5pMbu';
     }
     /*
@@ -31,4 +36,7 @@
       window.location.href = 'https://jinshuju.net/f/E7TgSQ';
     }
 </script>
+<head>
+
 <p>谢谢您的参与，投票已经结束。</p>
+</body>
