--- a/surveyredirect.html
+++ b/surveyredirect.html
@@ -4,36 +4,40 @@
     <meta charset="utf-8">
 <script language="javascript" type="text/javascript">   
     var now = new Date();
-	console.log(now);
-    //Test
-    if(now >= new Date('2021/4/1 15:50:00') && now < new Date('2021/4/1 16:10:00')) {
+    //Test1
+    if(now >= new Date('2021/4/1 15:50:00') && now < new Date('2021/4/1 16:30:00')) {
       window.location.href = 'https://jinshuju.net/f/cpqNOn';
-	  console.log(now);
+      return;
     }
-    //4-1
-    if(now >= new Date('2021/4/1 16:10:00') && now < new Date('2021/4/1 16:15:00')) {
+    //Test2
+    if(now >= new Date('2021/4/1 16:30:00') && now < new Date('2021/4/1 17:00:00')) {
       window.location.href = 'https://jinshuju.net/f/k5pMbu';
+      return;
     }
-    /*
     //3-31
     if(now >= new Date('2021/4/1 00:00:00') && now < new Date('2021/4/2 12:00:00')) {
       window.location.href = 'https://jinshuju.net/f/cpqNOn';
+      return; 
     }
     //4-1
     if(now >= new Date('2021/4/2 12:00:00') && now < new Date('2021/4/7 12:00:00')) {
       window.location.href = 'https://jinshuju.net/f/k5pMbu';
-    }*/
+      return;
+    }
     //4-7
     if(now >= new Date('2021/4/7 12:00:00') && now < new Date('2021/4/9 12:00:00')) {
       window.location.href = 'https://jinshuju.net/f/UeVI3F';
+      return;
     }
     //4-9
     if(now >= new Date('2021/4/9 12:00:00') && now < new Date('2021/4/14 12:00:00')) {
       window.location.href = 'https://jinshuju.net/f/J7r3db';
+      return;
     }
     //4-14
     if(now >= new Date('2021/4/14 12:00:00') && now < new Date('2021/4/16 12:00:00')) {
       window.location.href = 'https://jinshuju.net/f/E7TgSQ';
+      return;
     }
 </script>
 <head>
