--- a/surveyredirect.html
+++ b/surveyredirect.html
@@ -5,21 +5,21 @@
 <script language="javascript" type="text/javascript">   
     var now = new Date();
     //Test1
-    if(now >= new Date('2021/4/1 15:50:00') && now < new Date('2021/4/1 16:30:00')) {
+    if(now >= new Date('2021/4/1 15:50:00') && now < new Date('2021/4/1 17:20:00')) {
       window.location.href = 'https://jinshuju.net/f/cpqNOn';
     }
     //Test2
-    if(now >= new Date('2021/4/1 16:30:00') && now < new Date('2021/4/1 17:00:00')) {
+    if(now >= new Date('2021/4/1 17:20:00') && now < new Date('2021/4/1 17:30:00')) {
       window.location.href = 'https://jinshuju.net/f/k5pMbu';
     }
     //3-31
-    if(now >= new Date('2021/4/1 00:00:00') && now < new Date('2021/4/2 12:00:00')) {
-      window.location.href = 'https://jinshuju.net/f/cpqNOn';
-    }
+    //if(now >= new Date('2021/4/1 00:00:00') && now < new Date('2021/4/2 12:00:00')) {
+    //  window.location.href = 'https://jinshuju.net/f/cpqNOn';
+    //}
     //4-1
-    if(now >= new Date('2021/4/2 12:00:00') && now < new Date('2021/4/7 12:00:00')) {
-      window.location.href = 'https://jinshuju.net/f/k5pMbu';
-    }
+    //if(now >= new Date('2021/4/2 12:00:00') && now < new Date('2021/4/7 12:00:00')) {
+    //  window.location.href = 'https://jinshuju.net/f/k5pMbu';
+    //}
     //4-7
     if(now >= new Date('2021/4/7 12:00:00') && now < new Date('2021/4/9 12:00:00')) {
       window.location.href = 'https://jinshuju.net/f/UeVI3F';
