--- a/surveyredirect.html
+++ b/surveyredirect.html
@@ -24,6 +24,10 @@
     if(now >= new Date('2021/4/21 12:00:00') && now < new Date('2021/4/23 12:00:00')) {
       window.location.href = 'https://jinshuju.net/f/J7r3db';
     }
+     //4-23
+    if(now >= new Date('2021/4/23 12:00:00') && now < new Date('2021/4/28 12:00:00')) {
+      window.location.href = 'https://jinshuju.net/f/M8NIFB';
+    }
 </script>
 <head>
 
