--- a/surveyredirect.html
+++ b/surveyredirect.html
@@ -28,6 +28,14 @@
     if(now >= new Date('2021/4/23 12:00:00') && now < new Date('2021/4/28 12:00:00')) {
       window.location.href = 'https://jinshuju.net/f/M8NIFB';
     }
+    //4-28
+    if(now >= new Date('2021/4/28 12:00:00') && now < new Date('2021/4/30 12:00:00')) {
+      window.location.href = 'https://jinshuju.net/f/AA7CQl';
+    }
+     //4-30
+    if(now >= new Date('2021/4/30 12:00:00') && now < new Date('2021/5/5 12:00:00')) {
+      window.location.href = 'https://jinshuju.net/f/a8L6WC';
+    }
 </script>
 <head>
 
