--- a/IM/IMAgile.html
+++ b/IM/IMAgile.html
@@ -41,7 +41,7 @@
                                             <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="javascript:void(0);">研发团队</a></li>
                                         </ul>
                                     </li>
-                                     <li id="menu-item-30038" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-30038 dropdown">
+                                    <li id="menu-item-30038" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-30038 dropdown">
                                         <a href="javascript:void(0);" data-toggle="dropdown" class="dropdown-toggle sub-collapser">关键活动指南<b class="caret"></b></a>
                                         <ul role="menu" class=" dropdown-menu" style="display: none;">
                                             <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="https://xfmkp6q7le.feishu.cn/file/boxcn2zWUJsYiWvqN2YlvZQaFDd" target="_blank">业务梳理会</a></li>
@@ -50,7 +50,7 @@
                                             <li id="menu-item-30039" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30039"><a href="https://xfmkp6q7le.feishu.cn/file/boxcn2zWUJsYiWvqN2YlvZQaFDd" target="_blank">需求梳理会</a></li>
                                         </ul>
                                     </li>
-                                     <li id="menu-item-30038" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-30038 dropdown">
+                                    <li id="menu-item-30038" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-30038 dropdown">
                                         <a href="javascript:void(0);" data-toggle="dropdown" class="dropdown-toggle sub-collapser">培训资料<b class="caret"></b></a>
                                         <ul role="menu" class=" dropdown-menu" style="display: none;">
                                             <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="https://xfmkp6q7le.feishu.cn/file/boxcnqSmbn8isYH0uhoPOHgFpnb" target="_blank">敏捷通识培训-PPT</a></li>
@@ -69,9 +69,10 @@
                                     <li id="menu-item-30038" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-30038 dropdown">
                                         <a href="javascript:void(0);" data-toggle="dropdown" class="dropdown-toggle sub-collapser">敏捷试点-车联车控团队<b class="caret"></b></a>
                                         <ul role="menu" class=" dropdown-menu" style="display: none;">
-                                               <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="https://xfmkp6q7le.feishu.cn/sheets/shtcnRIuRuVxVXUjAmy4vHhO4yg" target="_blank">Sprint0辅导准备及初期工作安排</a></li>
+                                            <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="https://xfmkp6q7le.feishu.cn/sheets/shtcnRIuRuVxVXUjAmy4vHhO4yg" target="_blank">Sprint0辅导准备及初期工作安排</a></li>
                                             <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="javascript:void(0);" target="_blank">看板</a></li>
                                             <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="https://xfmkp6q7le.feishu.cn/sheets/shtcnPtw76km2Fal8tUNPcySq6b?from=from_lark_index_search" target="_blank">团队日历</a></li>
+                                            <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="javascript:void(0);" target="_blank">日常辅导记录</a></li>
                                         </ul>
                                     </li>
                                     <li id="menu-item-30038" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-30038 dropdown">
@@ -80,6 +81,7 @@
                                             <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="https://xfmkp6q7le.feishu.cn/sheets/shtcncP7gHRV73LLyuP98PE17Jc" target="_blank">Sprint0辅导准备及初期工作安排</a></li>
                                             <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="javascript:void(0);" target="_blank">看板</a></li>
                                             <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="javascript:void(0);" target="_blank">团队日历</a></li>
+                                            <li id="menu-item-30040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30040"><a href="javascript:void(0);" target="_blank">日常辅导记录</a></li>
                                         </ul>
                                     </li>
                                 </ul>
